# simple_fftw

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: simple_fftw.h  simple_fftw_base.h  simple_ifftw.h
test/: CMakeLists.txt  test_simple_fftw.cpp
